angelscript/angelscriptParser.cpp

// Generated from ./angelscript.g4 by ANTLR 4.13.2

#include "angelscriptVisitor.h"

#include "angelscriptParser.h"

using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AngelscriptParserStaticData final {
    AngelscriptParserStaticData(std::vector<std::string> ruleNames,
                                std::vector<std::string> literalNames,
                                std::vector<std::string> symbolicNames)
        : ruleNames(std::move(ruleNames)),
          literalNames(std::move(literalNames)),
          symbolicNames(std::move(symbolicNames)),
          vocabulary(this->literalNames, this->symbolicNames) {}

    AngelscriptParserStaticData(const AngelscriptParserStaticData &) = delete;
    AngelscriptParserStaticData(AngelscriptParserStaticData &&) = delete;
    AngelscriptParserStaticData &
    operator=(const AngelscriptParserStaticData &) = delete;
    AngelscriptParserStaticData &
    operator=(AngelscriptParserStaticData &&) = delete;

    std::vector<antlr4::dfa::DFA> decisionToDFA;
    antlr4::atn::PredictionContextCache sharedContextCache;
    const std::vector<std::string> ruleNames;
    const std::vector<std::string> literalNames;
    const std::vector<std::string> symbolicNames;
    const antlr4::dfa::Vocabulary vocabulary;
    antlr4::atn::SerializedATNView serializedATN;
    std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag angelscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
    std::unique_ptr<AngelscriptParserStaticData>
        angelscriptParserStaticData = nullptr;

void angelscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
    if (angelscriptParserStaticData != nullptr) {
        return;
    }
#else
    assert(angelscriptParserStaticData == nullptr);
#endif
    auto staticData = std::make_unique<AngelscriptParserStaticData>(
        std::vector<std::string>{
            "script",     "import_",   "enum_",      "typdef",
            "class_",     "mixin_",    "interface_", "funcdef",
            "virtprop",   "var_",      "func_",      "namespace_",
            "intfmthd",   "statblock", "paramlist",  "typemod",
            "type_",      "initlist",  "scope",      "datatype",
            "statement",  "switch_",   "break_",     "for_",
            "while_",     "dowhile",   "if_",        "continue_",
            "exprstat",   "try_",      "return_",    "case_",
            "expr",       "exprterm",  "exprvalue",  "constructcall",
            "exprpostop", "cast",      "lambda_",    "funccall",
            "varaccess",  "arglist",   "assign",     "condition",
            "exprop"},
        std::vector<std::string>{
            "",          "';'",         "'import'",  "'&'",         "'from'",
            "'shared'",  "'external'",  "'enum'",    "'{'",         "'='",
            "','",       "'}'",         "'typedef'", "'abstract'",  "'final'",
            "'class'",   "':'",         "'mixin'",   "'interface'", "'funcdef'",
            "'private'", "'protected'", "'get'",     "'set'",       "'const'",
            "'~'",       "'namespace'", "'('",       "'void'",      "')'",
            "'in'",      "'out'",       "'inout'",   "'<'",         "'>'",
            "'['",       "']'",         "'@'",       "'::'",        "'\\u003F'",
            "'auto'",    "'switch'",    "'break'",   "'for'",       "'while'",
            "'do'",      "'if'",        "'else'",    "'continue'",  "'try'",
            "'catch'",   "'return'",    "'case'",    "'default'",   "'.'",
            "'++'",      "'--'",        "'cast'",    "'function'"},
        std::vector<std::string>{
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "",
            "",         "",          "",        "",           "NUMBER",
            "BITS",     "STRING",    "LITERAL", "IDENTIFIER", "BITOP",
            "MATHOP",   "COMPOP",    "LOGICOP", "ASSIGNOP",   "PRIMTYPE",
            "FUNCATTR", "EXPRPREOP", "COMMENT", "WS"});
    staticData->serializedATN = antlr4::atn::SerializedATNView(
        serializedATNSegment,
        sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

    antlr4::atn::ATNDeserializer deserializer;
    staticData->atn = deserializer.deserialize(staticData->serializedATN);

    const size_t count = staticData->atn->getNumberOfDecisions();
    staticData->decisionToDFA.reserve(count);
    for (size_t i = 0; i < count; i++) {
        staticData->decisionToDFA.emplace_back(
            staticData->atn->getDecisionState(i), i);
    }
    angelscriptParserStaticData = std::move(staticData);
}

} // namespace

angelscriptParser::angelscriptParser(TokenStream *input)
    : angelscriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

angelscriptParser::angelscriptParser(
    TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options)
    : Parser(input) {
    angelscriptParser::initialize();
    _interpreter = new atn::ParserATNSimulator(
        this, *angelscriptParserStaticData->atn,
        angelscriptParserStaticData->decisionToDFA,
        angelscriptParserStaticData->sharedContextCache, options);
}

angelscriptParser::~angelscriptParser() { delete _interpreter; }

const atn::ATN &angelscriptParser::getATN() const {
    return *angelscriptParserStaticData->atn;
}

std::string angelscriptParser::getGrammarFileName() const {
    return "angelscript.g4";
}

const std::vector<std::string> &angelscriptParser::getRuleNames() const {
    return angelscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary &angelscriptParser::getVocabulary() const {
    return angelscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView angelscriptParser::getSerializedATN() const {
    return angelscriptParserStaticData->serializedATN;
}

//----------------- ScriptContext
//------------------------------------------------------------------

angelscriptParser::ScriptContext::ScriptContext(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *angelscriptParser::ScriptContext::EOF() {
    return getToken(angelscriptParser::EOF, 0);
}

std::vector<angelscriptParser::Import_Context *>
angelscriptParser::ScriptContext::import_() {
    return getRuleContexts<angelscriptParser::Import_Context>();
}

angelscriptParser::Import_Context *
angelscriptParser::ScriptContext::import_(size_t i) {
    return getRuleContext<angelscriptParser::Import_Context>(i);
}

std::vector<angelscriptParser::Enum_Context *>
angelscriptParser::ScriptContext::enum_() {
    return getRuleContexts<angelscriptParser::Enum_Context>();
}

angelscriptParser::Enum_Context *
angelscriptParser::ScriptContext::enum_(size_t i) {
    return getRuleContext<angelscriptParser::Enum_Context>(i);
}

std::vector<angelscriptParser::TypdefContext *>
angelscriptParser::ScriptContext::typdef() {
    return getRuleContexts<angelscriptParser::TypdefContext>();
}

angelscriptParser::TypdefContext *
angelscriptParser::ScriptContext::typdef(size_t i) {
    return getRuleContext<angelscriptParser::TypdefContext>(i);
}

std::vector<angelscriptParser::Class_Context *>
angelscriptParser::ScriptContext::class_() {
    return getRuleContexts<angelscriptParser::Class_Context>();
}

angelscriptParser::Class_Context *
angelscriptParser::ScriptContext::class_(size_t i) {
    return getRuleContext<angelscriptParser::Class_Context>(i);
}

std::vector<angelscriptParser::Mixin_Context *>
angelscriptParser::ScriptContext::mixin_() {
    return getRuleContexts<angelscriptParser::Mixin_Context>();
}

angelscriptParser::Mixin_Context *
angelscriptParser::ScriptContext::mixin_(size_t i) {
    return getRuleContext<angelscriptParser::Mixin_Context>(i);
}

std::vector<angelscriptParser::Interface_Context *>
angelscriptParser::ScriptContext::interface_() {
    return getRuleContexts<angelscriptParser::Interface_Context>();
}

angelscriptParser::Interface_Context *
angelscriptParser::ScriptContext::interface_(size_t i) {
    return getRuleContext<angelscriptParser::Interface_Context>(i);
}

std::vector<angelscriptParser::FuncdefContext *>
angelscriptParser::ScriptContext::funcdef() {
    return getRuleContexts<angelscriptParser::FuncdefContext>();
}

angelscriptParser::FuncdefContext *
angelscriptParser::ScriptContext::funcdef(size_t i) {
    return getRuleContext<angelscriptParser::FuncdefContext>(i);
}

std::vector<angelscriptParser::VirtpropContext *>
angelscriptParser::ScriptContext::virtprop() {
    return getRuleContexts<angelscriptParser::VirtpropContext>();
}

angelscriptParser::VirtpropContext *
angelscriptParser::ScriptContext::virtprop(size_t i) {
    return getRuleContext<angelscriptParser::VirtpropContext>(i);
}

std::vector<angelscriptParser::Var_Context *>
angelscriptParser::ScriptContext::var_() {
    return getRuleContexts<angelscriptParser::Var_Context>();
}

angelscriptParser::Var_Context *
angelscriptParser::ScriptContext::var_(size_t i) {
    return getRuleContext<angelscriptParser::Var_Context>(i);
}

std::vector<angelscriptParser::Func_Context *>
angelscriptParser::ScriptContext::func_() {
    return getRuleContexts<angelscriptParser::Func_Context>();
}

angelscriptParser::Func_Context *
angelscriptParser::ScriptContext::func_(size_t i) {
    return getRuleContext<angelscriptParser::Func_Context>(i);
}

std::vector<angelscriptParser::Namespace_Context *>
angelscriptParser::ScriptContext::namespace_() {
    return getRuleContexts<angelscriptParser::Namespace_Context>();
}

angelscriptParser::Namespace_Context *
angelscriptParser::ScriptContext::namespace_(size_t i) {
    return getRuleContext<angelscriptParser::Namespace_Context>(i);
}

size_t angelscriptParser::ScriptContext::getRuleIndex() const {
    return angelscriptParser::RuleScript;
}

std::any
angelscriptParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<angelscriptVisitor *>(visitor))
        return parserVisitor->visitScript(this);
    else
        return visitor->visitChildren(this);
}

angelscriptParser::ScriptContext *angelscriptParser::script() {
    ScriptContext *_localctx =
        _tracker.createInstance<ScriptContext>(_ctx, getState());
    enterRule(_localctx, 0, angelscriptParser::RuleScript);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(102);
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
            setState(102);
            _errHandler->sync(this);
            switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
                _input, 0, _ctx)) {
            case 1: {
                setState(90);
                import_();
                break;
            }

            case 2: {
                setState(91);
                enum_();
                break;
            }

            case 3: {
                setState(92);
                typdef();
                break;
            }

            case 4: {
                setState(93);
                class_();
                break;
            }

            case 5: {
                setState(94);
                mixin_();
                break;
            }

            case 6: {
                setState(95);
                interface_();
                break;
            }

            case 7: {
                setState(96);
                funcdef();
                break;
            }

            case 8: {
                setState(97);
                virtprop();
                break;
            }

            case 9: {
                setState(98);
                var_();
                break;
            }

            case 10: {
                setState(99);
                func_();
                break;
            }

            case 11: {
                setState(100);
                namespace_();
                break;
            }

            case 12: {
                setState(101);
                match(angelscriptParser::T__0);
                break;
            }

            default:
                break;
            }
            setState(104);
            _errHandler->sync(this);
            _la = _input->LA(1);
        } while ((((_la & ~0x3fULL) == 0) &&
                  ((1ULL << _la) & -9223370112587861786) != 0) ||
                 _la == angelscriptParser::PRIMTYPE);
        setState(106);
        match(angelscriptParser::EOF);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Import_Context
//------------------------------------------------------------------

angelscriptParser::Import_Context::Import_Context(ParserRuleContext *parent,
                                                  size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

angelscriptParser::Type_Context *angelscriptParser::Import_Context::type_() {
    return getRuleContext<angelscriptParser::Type_Context>(0);
}

tree::TerminalNode *angelscriptParser::Import_Context::IDENTIFIER() {
    return getToken(angelscriptParser::IDENTIFIER, 0);
}

angelscriptParser::ParamlistContext *
angelscriptParser::Import_Context::paramlist() {
    return getRuleContext<angelscriptParser::ParamlistContext>(0);
}

tree::TerminalNode *angelscriptParser::Import_Context::FUNCATTR() {
    return getToken(angelscriptParser::FUNCATTR, 0);
}

tree::TerminalNode *angelscriptParser::Import_Context::STRING() {
    return getToken(angelscriptParser::STRING, 0);
}

size_t angelscriptParser::Import_Context::getRuleIndex() const {
    return angelscriptParser::RuleImport_;
}

std::any
angelscriptParser::Import_Context::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<angelscriptVisitor *>(visitor))
        return parserVisitor->visitImport_(this);
    else
        return visitor->visitChildren(this);
}

angelscriptParser::Import_Context *angelscriptParser::import_() {
    Import_Context *_localctx =
        _tracker.createInstance<Import_Context>(_ctx, getState());
    enterRule(_localctx, 2, angelscriptParser::RuleImport_);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(108);
        match(angelscriptParser::T__1);
        setState(109);
        type_();
        setState(111);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == angelscriptParser::T__2) {
            setState(110);
            match(angelscriptParser::T__2);
        }
        setState(113);
        match(angelscriptParser::IDENTIFIER);
        setState(114);
        paramlist();
        setState(115);
        match(angelscriptParser::FUNCATTR);
        setState(116);
        match(angelscriptParser::T__3);
        setState(117);
        match(angelscriptParser::STRING);
        setState(118);
        match(angelscriptParser::T__0);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Enum_Context
//------------------------------------------------------------------

angelscriptParser::Enum_Context::Enum_Context(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *>
angelscriptParser::Enum_Context::IDENTIFIER() {
    return getTokens(angelscriptParser::IDENTIFIER);
}

tree::TerminalNode *angelscriptParser::Enum_Context::IDENTIFIER(size_t i) {
    return getToken(angelscriptParser::IDENTIFIER, i);
}

std::vector<angelscriptParser::ExprContext *>
angelscriptParser::Enum_Context::expr() {
    return getRuleContexts<angelscriptParser::ExprContext>();
}

angelscriptParser::ExprContext *
angelscriptParser::Enum_Context::expr(size_t i) {
    return getRuleContext<angelscriptParser::ExprContext>(i);
}

size_t angelscriptParser::Enum_Context::getRuleIndex() const {
    return angelscriptParser::RuleEnum_;
}

std::any
angelscriptParser::Enum_Context::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<angelscriptVisitor *>(visitor))
        return parserVisitor->visitEnum_(this);
    else
        return visitor->visitChildren(this);
}

angelscriptParser::Enum_Context *angelscriptParser::enum_() {
    Enum_Context *_localctx =
        _tracker.createInstance<Enum_Context>(_ctx, getState());
    enterRule(_localctx, 4, angelscriptParser::RuleEnum_);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(123);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == angelscriptParser::T__4

               || _la == angelscriptParser::T__5) {
            setState(120);
            _la = _input->LA(1);
            if (!(_la == angelscriptParser::T__4

                  || _la == angelscriptParser::T__5)) {
                _errHandler->recoverInline(this);
            } else {
                _errHandler->reportMatch(this);
                consume();
            }
            setState(125);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(126);
        match(angelscriptParser::T__6);
        setState(127);
        match(angelscriptParser::IDENTIFIER);
        setState(147);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
        case angelscriptParser::T__0: {
            setState(128);
            match(angelscriptParser::T__0);
            break;
        }

        case angelscriptParser::T__7: {
            setState(129);
            match(angelscriptParser::T__7);
            setState(130);
            match(angelscriptParser::IDENTIFIER);
            setState(133);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == angelscriptParser::T__8) {
                setState(131);
                match(angelscriptParser::T__8);
                setState(132);
                expr();
            }
            setState(143);
            _errHandler->sync(this);
            _la = _input->LA(1);
            while (_la == angelscriptParser::T__9) {
                setState(135);
                match(angelscriptParser::T__9);
                setState(136);
                match(angelscriptParser::IDENTIFIER);
                setState(139);
                _errHandler->sync(this);

                _la = _input->LA(1);
                if (_la == angelscriptParser::T__8) {
                    setState(137);
                    match(angelscriptParser::T__8);
                    setState(138);
                    expr();
                }
                setState(145);
                _errHandler->sync(this);
                _la = _input->LA(1);
            }
            setState(146);
            match(angelscriptParser::T__10);
            break;
        }

        default:
            throw NoViableAltException(this);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- TypdefContext
//------------------------------------------------------------------

angelscriptParser::TypdefContext::TypdefContext(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *angelscriptParser::TypdefContext::PRIMTYPE() {
    return getToken(angelscriptParser::PRIMTYPE, 0);
}

tree::TerminalNode *angelscriptParser::TypdefContext::IDENTIFIER() {
    return getToken(angelscriptParser::IDENTIFIER, 0);
}

size_t angelscriptParser::TypdefContext::getRuleIndex() const {
    return angelscriptParser::RuleTypdef;
}

std::any
angelscriptParser::TypdefContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<angelscriptVisitor *>(visitor))
        return parserVisitor->visitTypdef(this);
    else
        return visitor->visitChildren(this);
}

angelscriptParser::TypdefContext *angelscriptParser::typdef() {
    TypdefContext *_localctx =
        _tracker.createInstance<TypdefContext>(_ctx, getState());
    enterRule(_localctx, 6, angelscriptParser::RuleTypdef);

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(149);
        match(angelscriptParser::T__11);
        setState(150);
        match(angelscriptParser::PRIMTYPE);
        setState(151);
        match(angelscriptParser::IDENTIFIER);
        setState(152);
        match(angelscriptParser::T__0);

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Class_Context
//------------------------------------------------------------------

angelscriptParser::Class_Context::Class_Context(ParserRuleContext *parent,
                                                size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *>
angelscriptParser::Class_Context::IDENTIFIER() {
    return getTokens(angelscriptParser::IDENTIFIER);
}

tree::TerminalNode *angelscriptParser::Class_Context::IDENTIFIER(size_t i) {
    return getToken(angelscriptParser::IDENTIFIER, i);
}

std::vector<angelscriptParser::VirtpropContext *>
angelscriptParser::Class_Context::virtprop() {
    return getRuleContexts<angelscriptParser::VirtpropContext>();
}

angelscriptParser::VirtpropContext *
angelscriptParser::Class_Context::virtprop(size_t i) {
    return getRuleContext<angelscriptParser::VirtpropContext>(i);
}

std::vector<angelscriptParser::Func_Context *>
angelscriptParser::Class_Context::func_() {
    return getRuleContexts<angelscriptParser::Func_Context>();
}

angelscriptParser::Func_Context *
angelscriptParser::Class_Context::func_(size_t i) {
    return getRuleContext<angelscriptParser::Func_Context>(i);
}

std::vector<angelscriptParser::Var_Context *>
angelscriptParser::Class_Context::var_() {
    return getRuleContexts<angelscriptParser::Var_Context>();
}

angelscriptParser::Var_Context *
angelscriptParser::Class_Context::var_(size_t i) {
    return getRuleContext<angelscriptParser::Var_Context>(i);
}

std::vector<angelscriptParser::FuncdefContext *>
angelscriptParser::Class_Context::funcdef() {
    return getRuleContexts<angelscriptParser::FuncdefContext>();
}

angelscriptParser::FuncdefContext *
angelscriptParser::Class_Context::funcdef(size_t i) {
    return getRuleContext<angelscriptParser::FuncdefContext>(i);
}

size_t angelscriptParser::Class_Context::getRuleIndex() const {
    return angelscriptParser::RuleClass_;
}

std::any
angelscriptParser::Class_Context::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<angelscriptVisitor *>(visitor))
        return parserVisitor->visitClass_(this);
    else
        return visitor->visitChildren(this);
}

angelscriptParser::Class_Context *angelscriptParser::class_() {
    Class_Context *_localctx =
        _tracker.createInstance<Class_Context>(_ctx, getState());
    enterRule(_localctx, 8, angelscriptParser::RuleClass_);
    size_t _la = 0;

#if __cplusplus > 201703L
    auto onExit = finally([=, this] {
#else
    auto onExit = finally([=] {
#endif
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(157);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 24672) != 0)) {
            setState(154);
            _la = _input->LA(1);
            if (!((((_la & ~0x3fULL) == 0) && ((1ULL << _la) & 24672) != 0))) {
                _errHandler->recoverInline(this);
            } else {
                _errHandler->reportMatch(this);
                consume();
            }
            setState(159);
            _errHandler->sync(this);
            _la = _input->LA(1);
        }
        setState(160);
        match(angelscriptParser::T__14);
        setState(161);
        match(angelscriptParser::IDENTIFIER);
        setState(185);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
        case angelscriptParser::T__0: {
            setState(162);
            match(angelscriptParser::T__0);
            break;
        }

        case angelscriptParser::T__7:
        case angelscriptParser::T__15: {
            setState(172);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == angelscriptParser::T__15) {
                setState(163);
                match(angelscriptParser::T__15);
                setState(164);
                match(angelscriptParser::IDENTIFIER);
                setState(169);
                _errHandler->sync(this);
                _la = _input->LA(1);
                while (_la == angelscriptParser::T__9) {
                    setState(165);
                    match(angelscriptParser::T__9);
                    setState(166);
                    match(angelscriptParser::IDENTIFIER);
                    setState(171);
                    _errHandler->sync(this);
                    _la = _input->LA(1);
                }
            }
            setState(174);
            match(angelscriptParser::T__7);
            setState(181);
            _errHandler->sync(this);
            _la = _input->LA(1);
            while ((((_la & ~0x3fULL) == 0) &&
                    ((1ULL << _la) & -9223370112655425440) != 0) ||
                   _la == angelscriptParser::PRIMTYPE) {
                setState(179);
                _errHandler->sync(this);
                switch (
                    getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
                        _input, 11, _ctx)) {
                case 1: {
                    setState(175);
                    virtprop();
                    break;
                }

                case 2: {
                    setState(176);
                    func_();
                    break;
                }

                case 3: {
                    setState(177);
                    var_();
                    break;
                }

                case 4: {
                    setState(178);
                    funcdef();
                    break;
                }

                default:
                    break;
                }
                setState(183);
                _errHandler->sync(this);
                _la = _input->LA(1);
            }
            setState(184);
            match(angelscriptParser::T__10);
            break;
        }

        default:
            throw NoViableAltException(this);
        }

    } catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}
